# openproject-python-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/source/: conf.py  index.rst
openproject/: auth.py  client.py  constants.py  exceptions.py  types.py
